[package]
name = "resume-live-coding"
version = "0.1.0"
authors = ["aivashko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
threadpool = "1.8.1"